# devct

./: README.md  devct.py  main.py  pyproject.toml  shell.nix
devct/: __init__.py  cli.py
examples/nix/: compose.yml  dev-shell.nix
tests/: test_devct.py
