[project]
name = "devct"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "podman-compose>=1.6.0",
]

[project.optional-dependencies]
completion = [
    "argcomplete>=3.0",
    "pyyaml>=6.0",
]

[project.scripts]
devct = "devct:main"

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 120
