[project]
name = "devct"
version = "0.1.0"
description = "A thin wrapper around podman-compose for managing per-project dev container environments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argcomplete>=3.0",
    "pyyaml>=6.0",
]

[project.scripts]
devct = "devct:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 120
